--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
     <script src="./node_modules/pixi.js/dist/browser/pixi.min.js"></script>
     <script src="./node_modules/@pixi/graphics-extras/dist/browser/graphics-extras.min.js"></script>
     <script src="app.js"></script>
